--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 
     <title>お問い合わせ | サンプル株式会社</title>
 </head>
-
-<body>
+<!--余白を追加-->
+<body style="margin: 15px;">
     <header>
         <!-- 576px以上の画面幅のとき、メニューを表示する（それ未満なら折りたたむ）指定を追加 -->
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -42,7 +42,7 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- 電話に関するBootstrap Iconsのアイコンを「お電話：」の左に追加 -->
-                <img class="" src="icons/telephone-fill.svg" alt="電話"> <strong>お電話：</strong>
+                <img class="ma-1" src="icons/telephone-fill.svg" alt="電話"> <strong>お電話：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
@@ -82,7 +82,7 @@
                     <!-- カードのタイトル部分として設定 -->
                     <div class="card-header">
                         <!-- 営業時間の情報に関するBootstrap Iconsのアイコンを「営業時間」の左に追加 -->
-                        <img class="" src="icons/info-circle-fill.svg" alt="インフォメーション"> 営業時間
+                        <img class="ma-1" src="icons/info-circle-fill.svg" alt="インフォメーション"> 営業時間
                     </div>
 
                     <!-- カードの本文部分として設定 -->
@@ -98,11 +98,11 @@
             <!-- 576px以上の画面幅のとき、左側は3つ分のカラム幅で表示する指定を追加 -->
             <div class="col-sm-3">
                 <!-- メールに関するBootstrap Iconsのアイコンを「メール：」の左に追加 -->
-                <img class="" src="icons/envelope.svg" alt="メール"> <strong>メール：</strong>
+                <img class="ma-1" src="icons/envelope.svg" alt="メール"> <strong>メール：</strong>
             </div>
 
             <!-- 576px以上の画面幅のとき、右側は9つ分のカラム幅で表示する指定を追加 -->
-            <div class="col-sm-6">
+            <div class="col-sm-9">
                 <p>
                     プライバシーポリシーをご確認いただき、ご同意の上で、送信ボタンをクリックしてください。<br />
                     お問い合わせの内容は、受付日から3営業日以内をめどにご返信いたします。
